--- a/.github/workflows/holamundo.yml
+++ b/.github/workflows/holamundo.yml
@@ -1,8 +1,13 @@
 name: Hola Mundo
-on: push
+on: 
+ push:
+   branches: ["main"]
 
 jobs: 
  hola_mundo:
    runs-on: ubuntu-lastest
+   steps:
+    - name:Saludar
+     run: echo "Hola Mundo"
   
   
